# PveMCP

./: .mcp.json  INSTALL.md  README.md  pyproject.toml
.codex-plugin/: plugin.json
docs/: tools.md  workflows.md
examples/: codex-mcp.json  gemini-mcp.json  proxmcp.service  vm-mcp.service
memory-bank/: activeContext.md  decisionLog.md  productContext.md  progress.md  retrievalNotes.md  systemPatterns.md
plugin/scripts/: start-proxmcp.sh  start-vm-mcp.sh
plugin/skills/proxmcp/: SKILL.md
plugin/skills/vm-mcp/: SKILL.md
scripts/: install-proxmcp.sh  install-vm-mcp.sh  uninstall-proxmcp.sh  uninstall-vm-mcp.sh
src/proxmcp/: audit.py  cli.py  files.py  mcp_server.py  orchestration.py  policy.py  proxmox.py  runner.py  vm_memory.py  workflows.py
src/pvemcp/: analysis_tools.py  cli.py  cloudinit.py  crypto.py  lua_engine.py  mcp_server.py  power_tools.py  remote.py  replay.py  vm_memory.py
src/pvemcp/workflows/: analyze_devin.lua  auto_scale.lua  forensic_crash.lua  ping.lua  run_devin.lua  sandbox_gc.lua
src/vm_mcp/: cli.py  federation.py  mcp_server.py  policy.py  proxmox.py  security.py  service.py
src/vm_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_core.py  test_file_ops.py  test_metrics.py  test_proxmox.py  test_service.py  test_slo.py  test_xen.py
