[project]
name = "proxmcp"
version = "0.1.0"
requires-python = ">=3.10"
description = "Proxmox-oriented MCP server and CLI for VM lifecycle, orchestration, and host/guest operations"
dependencies = ["fastmcp"]
readme = "README.md"
license = { text = "MIT" }

[tool.pytest.ini_options]
pythonpath = ["src"]

[project.scripts]
vmctl = "proxmcp.cli:main"
proxmcp-server = "proxmcp.mcp_server:main"
