[project]
name = "proxmcp"
version = "0.1.0"
requires-python = ">=3.10"
description = "Proxmox-oriented MCP server and CLI for VM lifecycle, orchestration, and host/guest operations"
dependencies = [
    "fastmcp",
    "pyftpdlib>=2.2.0",
]
readme = "README.md"
license = { text = "MIT" }

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]

[project.scripts]
vmctl = "proxmcp.cli:main"
proxmcp-server = "proxmcp.mcp_server:main"
