[project]
name = "pvemcp"
version = "0.1.0"
requires-python = ">=3.10"
description = "Proxmox-oriented MCP server and CLI for VM lifecycle, orchestration, and host/guest operations"
dependencies = [
    "fastmcp",
    "lupa>=2.8",
    "pyftpdlib>=2.2.0",
]
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]

[project.scripts]
vmctl = "pvemcp.cli:main"
pvemcp-server = "pvemcp.mcp_server:main"
